{
    "name": "InputControls",
    "maps": [
        {
            "name": "Character",
            "id": "c7801155-5f2a-4b68-ae89-7570c76be468",
            "actions": [
                {
                    "name": "Shoot",
                    "id": "14b151f2-aa05-439a-8187-2a029a4bd054",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "Interact",
                    "id": "ffb02823-b5b9-4521-b94c-199f1df28bdf",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "Press",
                    "bindings": []
                },
                {
                    "name": "Run",
                    "id": "d8b13608-c6ee-4103-bec8-99c93d4245a6",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "Press,Press(behavior=1)",
                    "bindings": []
                },
                {
                    "name": "Reload",
                    "id": "6868c369-7348-4ae5-a6df-e2b7fa6f3597",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "Press,Press(behavior=1)",
                    "bindings": []
                },
                {
                    "name": "Rotate",
                    "id": "4f0d2e9a-eb52-4b06-9509-e06856e3375b",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": true,
                    "initialStateCheck": false,
                    "processors": "AxisDeadzone(min=0.1,max=1)",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "Move",
                    "id": "d8f88bcb-33d7-47e0-89fb-6647305e382c",
                    "expectedControlLayout": "",
                    "continuous": true,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "AxisDeadzone(min=0.1,max=1)",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "PrevWeapon",
                    "id": "5ed79789-4a83-4007-b8ea-653f9b62c357",
                    "expectedControlLayout": "",
                    "continuous": true,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "Press,Press(behavior=1)",
                    "bindings": []
                },
                {
                    "name": "NextWeapon",
                    "id": "543d55d4-9a3e-42aa-900d-0b715cb676eb",
                    "expectedControlLayout": "",
                    "continuous": true,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "Press,Press(behavior=1)",
                    "bindings": []
                },
                {
                    "name": "PrevItem",
                    "id": "436eefde-a568-4f10-b4f2-82b51a797f43",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "Press",
                    "bindings": []
                },
                {
                    "name": "NextItem",
                    "id": "b2e8d7e5-1e68-4b33-b5f8-979ebec469e5",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "Press",
                    "bindings": []
                },
                {
                    "name": "UseItem",
                    "id": "38ceaf71-d7f1-4c11-9178-120ae4854e0a",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "Press",
                    "bindings": []
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4132d978-c0ee-4fdc-89a6-6d799a355f4b",
                    "path": "<XInputController>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "e9222cd4-c608-45c7-9c17-0b86b0b989e7",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "ced2d949-a950-4f73-afbb-c3493e0b1f0d",
                    "path": "<XInputController>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "fcadf10f-bc9f-4da0-86d2-a6a4c0371877",
                    "path": "<XInputController>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "844b1f14-a4b4-46dd-ba0a-3a3a1990c1be",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "5c36be74-4dd0-4a93-b604-edcd2dd34690",
                    "path": "<XInputController>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrevWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "380bafa3-b395-458f-9660-472fdc1f3571",
                    "path": "<XInputController>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "ddc43fa0-1c78-4117-8d95-411c6ef0a9ce",
                    "path": "<XInputController>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextItem",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "d42a9ad7-f583-4606-b73e-b8c5f8388491",
                    "path": "<XInputController>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrevItem",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "8a85773a-5425-4b52-a373-c843f46b7519",
                    "path": "<XInputController>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "f8c25e22-8a7e-4348-b6b2-cb781606fb0b",
                    "path": "<XInputController>/leftShoulder",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "UseItem",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                }
            ]
        },
        {
            "name": "Vehicle",
            "id": "f1926770-9983-402f-bcf2-d7d16a49eccc",
            "actions": [
                {
                    "name": "Steer",
                    "id": "ee6cd4a9-14ab-4b3f-b126-ab731e2ae8d9",
                    "expectedControlLayout": "",
                    "continuous": true,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "HandBrake",
                    "id": "eae8754f-28c8-422d-9b32-8e4ae19bc59b",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "Boost",
                    "id": "7dca7720-cfbb-4ed0-a043-0a2f9d0a5b3b",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "Press,Press(behavior=1)",
                    "bindings": []
                },
                {
                    "name": "Interact",
                    "id": "2892d7b9-5c9b-4beb-9161-1258984e495f",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "Press",
                    "bindings": []
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1c967c5e-f7f4-4e1e-95fc-df4f174a9f43",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "Press,Press(behavior=1)",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "HandBrake",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "Left Stick",
                    "id": "d8bbb218-e843-4f2e-84b8-fc4f5c06d5ed",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steer",
                    "isComposite": true,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "up",
                    "id": "00d1ec81-e425-4fc0-a056-e6d346f68ff2",
                    "path": "<XInputController>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "down",
                    "id": "7f97fac5-f56b-4695-9176-85a255524a6a",
                    "path": "<XInputController>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "left",
                    "id": "7a76bc69-7ba4-4d40-a2f7-00a20e61a6df",
                    "path": "<XInputController>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "right",
                    "id": "84d9355f-d054-453b-908a-60520feb9103",
                    "path": "<XInputController>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "67d80a65-0670-46c4-9bd5-43eede996fe1",
                    "path": "<XInputController>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Boost",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "d4e7bbd1-f954-46ff-8d6c-104cad2204c8",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                }
            ]
        },
        {
            "name": "Camera",
            "id": "8e2f464d-44c2-418c-9349-91ad7aa3bb56",
            "actions": [
                {
                    "name": "Rotate",
                    "id": "2d9b07f5-a173-4701-afba-ff62a0575c6e",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "AxisDeadzone(min=0.1,max=1)",
                    "interactions": "",
                    "bindings": []
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a563f6b7-4ad2-4867-a31d-0c243f7388ba",
                    "path": "<XInputController>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                }
            ]
        }
    ],
    "controlSchemes": []
}